cilium-firewall.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "lock-down-all-nodes"
spec:
  description: "Allow a minimum set of required ports on ingress of worker nodes"
  nodeSelector:
    matchLabels:
      k8s:topology.kubernetes.io/region: hel1
  ingress:
    - fromEntities:
        - cluster
        - remote-node
        - health
    - toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "666"
              protocol: TCP
            - port: "2379"
              protocol: TCP
            - port: "4240"
              protocol: TCP
            - port: "8472"
              protocol: UDP
